✨feat: example crud feature, with big big big changes
