# internal/api/models/PingPongModels.go
@@ -3,6 +3,7 @@ package models
 import "time"
 
 type PingPongResponse struct {
+	IsSuccess bool      `json:"is_success"`
 	Message   string    `json:"message"`
 	Timestamp time.Time `json:"timestamp"`
 }
